Added android studio custom vm options